Add scores and outcomes

--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
     font-size: larger;
     padding: 0px 0px 0px 100px"> The computer picked:&nbsp;&nbsp;<span id="computerSelected"></span></p>
 
+    <p id="scorecard">  </p>
+    
     <h4>Scorecard: </h4>
-    <p id="scorecard"></p>
+    
+    <p id="playerScoreCount"> </p>
+   
+    <p id="computerScoreCount"> </p>
 
     <script src = "javascript.js"> </script>
 
