--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -65,6 +65,12 @@
     <p id="playerScoreCount"> </p>
    
     <p id="computerScoreCount"> </p>
+
+    <div class="hidden endModal" id="endgameModal">
+        <p class="modalTitle" id="endgameMsg"></p>
+        <button class="button">Play again</button>
+    </div>
+
 </div>
 </div>
     
