End game after first to reach 5 + add end modal

--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
    
     <p id="computerScoreCount"> </p>
 
-    <div class="hidden endModal" id="endgameModal">
-        <p class="modalTitle" id="endgameMsg">blah</p>
-        <button class="button">Play again</button>
-    </div>
+    <div class="hidden endModal">
+        <div class="modalTitle">Grand Finale</div>
+        <p style="font-family: 'oddly_calmingregular';
+            font-size: larger;" id="final-message">
+        </p>
+        <button id="playagain" >Play again</button>
+      </div>
 
 </div>
 </div>
