Complete final version with 5 rounds and end modal

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </main>
     
         <h1> Play Rock, Paper, Scissors!</h1>
-        <h3> You get five rounds. <br> <br> Pick your poison: </h3>
+        <h3 style="font-family: hello_goodbyeregular"> First to reach 5 wins the round. <br> <br> Pick your poison: </h3>
     
     <div class="images">
 
